--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Урок №1</title>
 </head>
 <body>
- 
+<div class="block">
+<h1 id="github">Привет, мир!</h1>
+</div>
 <script src="./script/script.js"></script>
 </body>
 </html>
