Поменял текст в верстке

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <div class="block">
-<h1 id="github">Привет, мир!</h1>
+    <div class="github">
+      <h1 id="hello">Привет, мир!</h1>
+      <p>Разобраться с git'ом и github'ом</p>
+      <button id="github">Погрузиться в git c hub'ом</button>
+    </div>
 </div>
 <script src="./script/script.js"></script>
 </body>
