Изменил текст в блоке

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="block">
     <div class="github">
       <h1 id="hello">Привет, мир!</h1>
-      <p>Разобраться с git'ом и github'ом</p>
+      <p>Урок по изучению git и github</p>
       <button id="github">Погрузиться в git c hub'ом</button>
     </div>
 </div>
