--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="block">
     <div class="github">
-      <h1 id="hello">Привет, мир!</h1>
+      <h1 id="hello">Изучаем Git</h1>
       <p>Урок по изучению git и github</p>
       <button id="github">Погрузиться в git c hub'ом</button>
     </div>
