Добавил текст lorem...

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="github">
       <h1 id="hello">Изучаем Git</h1>
       <p>Урок по изучению git и github</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia libero quam repellat. Dicta ad sint accusamus. Incidunt, quos possimus unde velit cupiditate excepturi facilis cumque consectetur voluptates aperiam, ipsum officiis!</p>
       <button id="github">Погрузиться в git c hub'ом</button>
     </div>
 </div>
