Урок 11: Обязательное задание (Практика от Максима) - ошибки

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="data">
             <div class="salary">
                 <div class="salary-title title">Месячный доход*</div>
-                <input type="text" class="salary-amount" placeholder="Сумма">
+                <input type="text" class="salary-amount" placeholder="Сумма" value="100000">
             </div>
 
             <div class="income">
                 <div class="income-title title">Дополнительный доход</div>
                 <div class="income-items">
-                    <input type="text" class="income-title" placeholder="Наименование">
-                    <input type="text" class="income-amount" placeholder="Сумма">
+                    <input type="text" class="income-title" placeholder="Наименование" value="Таксёрство">
+                    <input type="text" class="income-amount" placeholder="Сумма" value="30000">
                 </div>
 
                 <button class="btn_plus income_add">+</button>
@@ -41,8 +41,8 @@
             <div class="expenses">
                 <div class="expenses-title title">Обязательные расходы</div>
                 <div class="expenses-items">
-                    <input type="text" class="expenses-title" placeholder="Наименование">
-                    <input type="text" class="expenses-amount" placeholder="Сумма">
+                    <input type="text" class="expenses-title" placeholder="Наименование" value="Машина 1">
+                    <input type="text" class="expenses-amount" placeholder="Сумма" value="1000">
                 </div>
 
                 <button class="btn_plus expenses_add">+</button>
