--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -19,14 +19,14 @@
         <div class="data">
             <div class="salary">
                 <div class="salary-title title">Месячный доход*</div>
-                <input type="text" class="salary-amount" placeholder="Сумма" value="100000">
+                <input type="text" class="salary-amount" placeholder="Сумма">
             </div>
 
             <div class="income">
                 <div class="income-title title">Дополнительный доход</div>
                 <div class="income-items">
-                    <input type="text" class="income-title" placeholder="Наименование" value="Таксёрство">
-                    <input type="text" class="income-amount" placeholder="Сумма" value="30000">
+                    <input type="text" class="income-title" placeholder="Наименование">
+                    <input type="text" class="income-amount" placeholder="Сумма">
                 </div>
 
                 <button class="btn_plus income_add">+</button>
@@ -41,15 +41,15 @@
             <div class="expenses">
                 <div class="expenses-title title">Обязательные расходы</div>
                 <div class="expenses-items">
-                    <input type="text" class="expenses-title" placeholder="Наименование" value="Машина 1">
-                    <input type="text" class="expenses-amount" placeholder="Сумма" value="1000">
+                    <input type="text" class="expenses-title" placeholder="Наименование">
+                    <input type="text" class="expenses-amount" placeholder="Сумма">
                 </div>
 
                 <button class="btn_plus expenses_add">+</button>
             </div>
             <div class="additional_expenses">
                 <div class="additional_expenses-title title">Возможные расходы <span>(перечислите через запятую)</span></div>
-                <input type="text" class="additional_expenses-item" placeholder="название">
+                <input type="text" class="additional_expenses-item" placeholder="Название">
 
             </div>
 
