--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Урок №1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Урок №14.1: ООП - Наследование, прототипы, конструкторы и классы</title>
 </head>
 <body>
-<div class="block">
-    <div class="github">
-      <h1 id="hello">Изучаем Git</h1>
-      <p>Урок по изучению git и github</p>
-      <button id="github">Погрузиться в git c hub'ом</button>
-    </div>
-</div>
+
 <script src="./script/script.js"></script>
 </body>
 </html>
