--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Урок №14.1: ООП - Наследование, прототипы, конструкторы и классы</title>
 </head>
 <body>
-
+<div>
+    <div class="github">
+        <h1 id="hello">Изучаем ООП</h1>
+        <p>Наследование, прототипы, конструкторы и классы</p>
+        <table>
+            <tr>
+                <td class="default"></td>
+            </tr>
+        </table>
+    </div>
+</div>
 <script src="./script/script.js"></script>
 </body>
 </html>
