--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <span class="deposit-checkmark"></span>
                 </label>
                 <select class="deposit-bank">
-                    <option value="">Процент</option>
+                    <option value="">Выберите банк</option>
                     <option value="4">Сбербанк</option>
                     <option value="5">Газпромбанк</option>
                     <option value="6">Тинькофф</option>
