Урок 16.2: Обязательное задание

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
 <div class="block">
     <div class="github">
-      <h1 id="hello">Изучаем Git</h1>
-      <p>Урок по изучению git и github</p>
-      <button id="github">Погрузиться в git c hub'ом</button>
+      <h1 id="hello">Урок 16</h1>
+      <p>Задание 2 к уроку 16</p>
     </div>
+</div>
+<div>
+    <ul>
+        <li>Два класса, First и Second, Second наследует от First.</li>
+        <li>В First есть метод hello - он печатает в консоль "Привет я метод родителя!".</li>
+        <li>Нужно написать в Second метод hello, чтоб он сначала вызывал метод hello
+            из First, а потом сразу печатал в консоль "А я наследуемый метод!"</li>
+    </ul>
 </div>
 <script src="./script/script.js"></script>
 </body>
