--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="row justify-content-between main-header">
 				<div class="col-md-2 col-sm-4 col-4">
 					<div class="logo">
-						<img class="logo-img" src="images/3dglo.png" alt="...">
+						<img class="logo-img" src="./images/3dglo.png" alt="...">
 
 					</div>
 				</div>
@@ -419,6 +419,6 @@
 	</div>
 </div>
 
-
+<script src="./script/script.js"></script>
 </body>
 </html>
