Урок 27 - Обязательное задание

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 	lastFormValidation.init();
 </script>-->
 
-<script src="./script/script.js"></script>
+<script src="./dist/main.js"></script>
 
 </body>
 </html>
