Диплом: Переписан вызов модального окна + отправка форм + валидация

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -79,13 +80,15 @@
             <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-12">
                 <form class="main-form text-center wow fadeInRight">
                     <h4>Заказать консультацию!</h4>
-                    <p>Не знаете как построить канализацию? <br> Закажите <span>бесплатную</span> консультацию <br> мы
+                    <p>Не знаете как построить канализацию? <br> Закажите <span>бесплатную</span> консультацию <br>
+                        мы
                         подскажем и подготовим проект и смету</p>
                     <label for="phone_3">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="text" id="phone_3" name="user_phone" placeholder="+7(___)___-__-__"
-                           required>
+                    <input class="phone-user" type="text" id="phone_3" name="user_phone"
+                           placeholder="+7(___)___-__-__" required>
                     <button class="button main-form-btn" name="submit" type="submit">Получить консультацию</button>
-                    <p class="small">Заполнения заявки Вас ни к чему не обязывает! <br> Вы сможете отказаться в любой
+                    <p class="small">Заполнения заявки Вас ни к чему не обязывает! <br> Вы сможете отказаться в
+                        любой
                         момент</p>
                     <p class="stock">Осталось 3 места на май !</p>
                 </form>
@@ -100,7 +103,8 @@
             <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInLeft">
                 <h2>Получите расчёт стоимости <br> <span>за 2000 руб.</span> <strong>бесплатно,</strong><br>а так-же
                     скидку на септик!</h2>
-                <p>Оставьте заявку на расчет стоимости септика и мы зафиксируем за вами сезонные цены. <br><br>По своему
+                <p>Оставьте заявку на расчет стоимости септика и мы зафиксируем за вами сезонные цены. <br><br>По
+                    своему
                     номеру телефона вы сможете получить скидку. <br> Это позволит сэкономить вам <strong>до 10 000
                         рублей</strong><br> при заказе септиков.</p>
             </div>
@@ -110,12 +114,14 @@
                     <label for="name_2">Как к вам обращаться</label>
                     <input type="text" id="name_2" name="user_name" placeholder="Ваше имя" required>
                     <label for="phone_2">Ваш телефон для получения скидки</label>
-                    <input class="phone-user" type="text" id="phone_2" name="user_phone" placeholder="+7(___)___-__-__"
-                           required>
+                    <input class="phone-user" type="text" id="phone_2" name="user_phone"
+                           placeholder="+7(___)___-__-__" required>
                     <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и скидку
                     </button>
-                    <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
-                        грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
+                    <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика.
+                        типа
+                        грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента
+                        дома и
                         еще 7 параметров</p>
                 </form>
             </div>
@@ -171,39 +177,41 @@
                         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="headingTwo">
                             <div class="panel-body">
-
-                                <div class="title-text">первый колодец (приемный)</div>
-                                <div class="select-box">
-                                    <p><strong>Диаметр</strong></p>
-                                    <select class="form-control expand">
-                                        <option>1.4 метра</option>
-                                        <option>2 метра</option>
-                                    </select>
+                                <div id="first-section">
+                                    <div class="title-text">первый колодец (приемный)</div>
+                                    <div class="select-box">
+                                        <p><strong>Диаметр</strong></p>
+                                        <select class="form-control expand">
+                                            <option value="1">1.4 метра</option>
+                                            <option value="1.2">2 метра</option>
+                                        </select>
+                                    </div>
+                                    <div class="select-box">
+                                        <p><strong>Количество колец</strong></p>
+                                        <select class="form-control expand">
+                                            <option value="1">1 штука</option>
+                                            <option value="1.3">2 штуки</option>
+                                            <option value="1.5">3 штуки</option>
+                                        </select>
+                                    </div>
                                 </div>
-                                <div class="select-box">
-                                    <p><strong>Количество колец</strong></p>
-                                    <select class="form-control expand">
-                                        <option>1 штука</option>
-                                        <option>2 штуки</option>
-                                        <option>3 штуки</option>
-                                    </select>
-                                </div>
-
-                                <div class="title-text">второй колодец (дренажный)</div>
-                                <div class="select-box">
-                                    <p><strong>Диаметр</strong></p>
-                                    <select class="form-control expand">
-                                        <option>1.4 метра</option>
-                                        <option>2 метра</option>
-                                    </select>
-                                </div>
-                                <div class="select-box">
-                                    <p><strong>Количество колец</strong></p>
-                                    <select class="form-control expand">
-                                        <option>1 штука</option>
-                                        <option>2 штуки</option>
-                                        <option>3 штуки</option>
-                                    </select>
+                                <div id="second-section">
+                                    <div class="title-text">второй колодец (дренажный)</div>
+                                    <div class="select-box">
+                                        <p><strong>Диаметр</strong></p>
+                                        <select class="form-control expand">
+                                            <option value="1">1.4 метра</option>
+                                            <option value="1.2">2 метра</option>
+                                        </select>
+                                    </div>
+                                    <div class="select-box">
+                                        <p><strong>Количество колец</strong></p>
+                                        <select class="form-control expand">
+                                            <option value="1">1 штука</option>
+                                            <option value="1.3">2 штуки</option>
+                                            <option value="1.5">3 штуки</option>
+                                        </select>
+                                    </div>
                                 </div>
                                 <a class="button construct-btn" data-toggle="collapse" data-parent="#accordion"
                                    href="#collapseThree"><span>Следующий шаг</span></a>
@@ -235,7 +243,8 @@
                                 </div>
                                 <img class="bottom-septic-img" src="img/constructor/bottom-septic.png" alt="bs">
                                 <a class="button construct-btn" data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapseFour" aria-expanded="false" aria-controls="collapseFour"><span>Следующий шаг</span></a>
+                                   href="#collapseFour" aria-expanded="false"
+                                   aria-controls="collapseFour"><span>Следующий шаг</span></a>
                             </div>
                         </div>
                     </div>
@@ -352,7 +361,8 @@
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7">
                 <h2>Закажите бесплатный замер</h2>
-                <p>Наш специалист бесплатно приедет, рассчитает<br>септик именно для вашего участка и дома! <br><br>А
+                <p>Наш специалист бесплатно приедет, рассчитает<br>септик именно для вашего участка и дома!
+                    <br><br>А
                     также зафиксируйте специальные цены <br><strong>на монтаж септиков со скидкой 15%</strong></p>
                 <p class="gauging-bold">Выезд специалиста вас ни к чему не обязывает!</p>
                 <button class="check-btn button gauging-button">Получить чек-лист и скидку</button>
@@ -379,9 +389,11 @@
                      aria-labelledby="headingOne">
                     <div class="panel-body">
                         Вероятность того, что вода в подводящем трубопроводе замерзнет, отсутствует, потому что она
-                        находится в трубе лишь на протяжении небольшого промежутка времени, а все остальное время труба
+                        находится в трубе лишь на протяжении небольшого промежутка времени, а все остальное время
+                        труба
                         пуста. При прокладке трубопровода, предназначенного для хоз. бытового стока, необходимо при
-                        монтаже соблюдать правильный уклон трассы. Для трубы диаметром 110 мм перепад должен составлять
+                        монтаже соблюдать правильный уклон трассы. Для трубы диаметром 110 мм перепад должен
+                        составлять
                         20 мм на 1 метр, для трубы диаметром 160 мм перепад должен составлять 8 мм на 1 метр.
                     </div>
                 </div>
@@ -417,7 +429,8 @@
                      aria-labelledby="headingThree-two">
                     <div class="panel-body">
                         Да. Иногда зимний монтаж предпочтительней. Большегрузная техника по мороженому грунту не
-                        продавит и не испортит дорогу или ландшафт участка, да и грунтовая вода отходит. Весной грунт
+                        продавит и не испортит дорогу или ландшафт участка, да и грунтовая вода отходит. Весной
+                        грунт
                         даст усадку и уплотнится, и вам останется сделать лишь ландшафтное планирование.
                     </div>
                 </div>
@@ -432,7 +445,8 @@
             <div class="col-lg-6 col-md-6">
                 <h2>Кабаев Дмитрий</h2>
                 <p>Коммерческий директор компании "BIO-GLO"</p>
-                <span>"Мы всегда находим общий язык с клиентами, любим, когда нам задают вопросы. Ведь именно из них мы понимаем, что волнует клиентов больше всего."</span>
+                <span>"Мы всегда находим общий язык с клиентами, любим, когда нам задают вопросы. Ведь именно из них
+                        мы понимаем, что волнует клиентов больше всего."</span>
 
 
             </div>
@@ -491,9 +505,11 @@
                 <label for="phone_1">Ваш телефон для получения скидки</label>
                 <input class="phone-user" type="text" id="phone_1" name="user_phone" placeholder="+7(___)___-__-__"
                        required>
-                <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и скидку</button>
+                <button class="button capture-form-btn" name="submit" type="submit">Получить расчет и
+                    скидку</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
-                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и еще
+                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
+                    еще
                     7 параметров</p>
             </form>
             <!-- </div> -->
@@ -514,7 +530,8 @@
                        required>
                 <button class="button capture-form-btn" name="submit" type="submit">Заказать со скидкой</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
-                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и еще
+                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
+                    еще
                     7 параметров</p>
             </form>
             <!-- </div> -->
@@ -533,9 +550,11 @@
                 <label for="phone_12">Ваш телефон для получения скидки</label>
                 <input class="phone-user" type="text" id="phone_12" name="user_phone" placeholder="+7(___)___-__-__"
                        required>
-                <button class="button capture-form-btn" name="submit" type="submit">Получить чек-лист и скидку</button>
+                <button class="button capture-form-btn" name="submit" type="submit">Получить чек-лист и
+                    скидку</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
-                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и еще
+                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
+                    еще
                     7 параметров</p>
             </form>
             <!-- </div> -->
@@ -556,7 +575,8 @@
                        required>
                 <button class="button capture-form-btn" name="submit" type="submit">Получить консультацию</button>
                 <p class="small">Вы получите расчет стоимости с учетом выбора <br>подходящего объема септика. типа
-                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и еще
+                    грунта, <br> расположения объектов на участке, уровня грунтовых <br> вод, типа фундамента дома и
+                    еще
                     7 параметров</p>
             </form>
             <!-- </div> -->
@@ -566,6 +586,6 @@
 
 
 <script src="./dist/main.js"></script>
-
 </body>
+
 </html>
